Completed Retrieve two recycler views

--- a/app/src/main/res/layout/breed_holder.xml
+++ b/app/src/main/res/layout/breed_holder.xml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="165dp"
-    android:id="@+id/breed_background"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="240dp"
+    android:layout_height="340dp"
     app:cardCornerRadius="30dp"
+    android:id="@+id/breed_holder"
     android:layout_marginRight="20dp"
-    android:layout_height="205dp">
+    app:cardBackgroundColor="@color/dark_orange">
 
     <LinearLayout
-        android:id="@+id/ll_background"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/splash"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/breed_dpimg"
-            android:layout_width="120dp"
-            android:layout_height="95dp"
-            android:layout_gravity="center"
+        <TextView
+            android:id="@+id/breed_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/labrador_dp" />
+            android:fontFamily="@font/poppins"
+            android:text="Labrador Retriever"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="210dp"
+            app:cardCornerRadius="20dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/breed_image"
+                android:layout_width="match_parent"
+                android:layout_height="125dp"
+                android:layout_gravity="center"
+                android:src="@drawable/labrador_img1"/>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/breed_title"
-            android:layout_width="wrap_content"
+            android:id="@+id/breed_details"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="17dp"
-            android:textSize="11dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_light"
+            android:text="The labrador retriever is often the most popular purebred dog in North America (according to dog registrations). Originally bred to be a useful working dog, the lab's friendly attitude and hard working behavior has made it one of the most recognized and well-known dogs in the world."
             android:textColor="@color/white"
-            android:fontFamily="@font/poppins_semibold"
-            android:text="Labrador Retriever" />
-
-
-        <RatingBar
-            android:id="@+id/avg_rating"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:numStars="5"
-            android:progressTint="@color/yellow1"
-            android:rating="4.5"
-            android:secondaryProgressTint="@color/yellow" />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
