--- a/app/src/main/res/layout/group_holder.xml
+++ b/app/src/main/res/layout/group_holder.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
+    android:layout_width="170dp"
     android:id="@+id/card_view"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="@color/white"
     android:outlineAmbientShadowColor="@color/red"
     android:outlineSpotShadowColor="@color/red"
-    app:strokeColor="@color/dark_orange"
     app:cardCornerRadius="23dp"
     app:strokeWidth="1.5dp"
-    android:layout_marginHorizontal="5dp"
+    android:layout_marginHorizontal="10dp"
     app:cardElevation="15dp"
-    android:layout_height="75dp">
+    android:layout_height="190dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,21 +21,20 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/img"
-            android:layout_width="35dp"
-            app:tint="@color/dark_orange"
-            tools:src="@drawable/ic_labrador_retriever"
-            android:layout_height="30dp"/>
+            android:id="@+id/groupImage"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/labrador_retriever"/>
 
         <TextView
-            android:id="@+id/txt_title"
+            android:id="@+id/groupName"
             android:layout_width="wrap_content"
-            android:textColor="@color/dark_orange"
-            android:textStyle="bold"
-            android:fontFamily="@font/poppins_light"
             android:layout_height="wrap_content"
-            android:text="Sporting"/>
+            android:fontFamily="@font/poppins_light"
+            android:text="@string/groupName"
+            android:textColor="@color/yellow"
+            android:textSize="23sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
-
 </com.google.android.material.card.MaterialCardView>
