--- a/app/src/main/res/layout/activity_vet_profile.xml
+++ b/app/src/main/res/layout/activity_vet_profile.xml
@@ -25,7 +25,6 @@
         android:fontFamily="@font/poppins_semibold"
         android:gravity="center"
         android:text="@string/doctor_name"
-        android:textAllCaps="true"
         android:textColor="@color/maroon"
         android:textSize="25sp" />
 
@@ -42,13 +41,15 @@
 
     <TextView
         android:id="@+id/address_doc"
-        android:layout_width="383dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/adressTV"
         android:background="@drawable/tv_vet"
-        android:paddingStart="20dp"
-        android:paddingTop="11dp"
         android:fontFamily="@font/poppins_semibold"
+        android:paddingStart="20dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="30dp"
+        android:paddingTop="11dp"
         android:text="@string/address_doc"
         android:textAllCaps="true"
         android:textSize="20sp" />
