--- a/app/src/main/res/layout/activity_veterinarian_list.xml
+++ b/app/src/main/res/layout/activity_veterinarian_list.xml
@@ -9,18 +9,14 @@
 
     <TextView
         android:id="@+id/vetList_TV"
-        android:layout_width="267dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="73dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="71dp"
         android:fontFamily="@font/poppins_light"
         android:gravity="center"
         android:text="@string/veterinarian_search"
         android:textColor="#FF9017"
-        android:textSize="40sp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,8 +28,8 @@
         android:layout_height="53dp"
         android:layout_below="@id/vetList_TV"
         android:layout_alignStart="@id/vetList_TV"
-        android:layout_marginStart="-33dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="109dp"
         android:background="@drawable/search_layout"
         android:ems="10"
         android:fontFamily="@font/poppins_light"
@@ -51,9 +47,9 @@
         android:layout_height="49dp"
         android:layout_below="@id/vetList_TV"
         android:layout_alignBottom="@+id/search_field"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginBottom="2dp"
         android:layout_toEndOf="@+id/search_field"
         android:background="@drawable/search_icon" />
 
