--- a/app/src/main/res/layout/fragment_vaccinations.xml
+++ b/app/src/main/res/layout/fragment_vaccinations.xml
@@ -25,8 +25,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vaccinationlist_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="110dp"
+        android:layout_marginBottom="90dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
