--- a/app/src/main/res/layout/activity_add_dog.xml
+++ b/app/src/main/res/layout/activity_add_dog.xml
@@ -38,16 +38,15 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_DOGAGE"
         android:layout_width="282dp"
         android:layout_height="48dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/inputtext"
         android:ems="10"
-        android:hint="@string/DOB"
+        android:text="@string/DOB"
         android:importantForAutofill="no"
-        android:inputType="date"
         android:textAlignment="center"
         android:textColor="@color/maroon"
         android:textColorHint="@color/maroonHint"
@@ -117,7 +116,7 @@
         android:layout_marginBottom="68dp"
         android:background="@drawable/bttn_style_welcome"
         android:elevation="4dp"
-        android:fontFamily="@font/berkshire_swash"
+        android:fontFamily="@font/poppins_light"
         android:text="@string/add_dog"
         android:textAllCaps="false"
         android:textColor="@color/maroon"
